ENMeval 2.0.2
===========
o  Fixed a bug that caused an error in the clamp.vars() function when more than one categorical variable was specified for tabular data inputs (which ENMevaluate() uses internally).
o  Added new tests for functionality with multiple categorical variables.

ENMeval 2.0.1
===========
o  Fixed the DESCRIPTION file to ensure that all necessary packages are installed with the
installation of ENMeval.
o  Addition of ENMevaluation_convert() function to convert old ENMevaluation objects (<=0.3.1) into
new (>=2.0.0) ones.


ENMeval 2.0.0
===========
o  Complete redesign of nearly all functionality. Code is now much tidier and readable thanks to dplyr and tidyr, and commented documentation is more prevalent throughout.
o  New object-oriented algorithm specification for using any algorithm with ENMeval. Implementations of the new ENMdetails object exist for maxent.jar, maxnet, and BIOCLIM as examples of what is possible.
o  Automated output metadata for tuning analyses which uses the Range Model Metadata Standards (R package rangeModelMetadata).
o  New function for running null ENM simulations and calculating significance and effect sizes for empirical model performance metrics (Bohl et al. 2019 -- check ?ENMnulls).
o  New partition schema for fully withheld testing data and evaluation without partitions. Also includes a new option for spatial block partitions to customize the spatial orientation of the blocks.
o  Now implements continuous Boyce Index for training, validation, and full withheld testing data (via R package ecospat), and allows use of custom evaluation functions with the user.eval argument (see ?ENMevaluate).
o  A suite of new visualization functions using ggplot2 that map partition groups, plot environmental similarity histograms for partition groups, map environmental similarity for partition groups, and plot histograms or violins for null ENM results. The original evaluation plots were also redone and now use ggplot.